# deep-learning-course

./: 01_part1_Python.ipynb  01_part2_Python.ipynb  01_part3_Keras.ipynb  02_CNN_Introduction.ipynb  03_Network_Training.ipynb  04_Common_CNN_architectures.ipynb  README.md  output.txt  plot.py  pyproject.toml
report/: Part2.md  Part2.ods  Part3.md  Part4.md  Part5.md  Part6.md  egbib.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.md  report.tex
