[tool.poetry]
name = "deep-learning-course"
version = "0.1.0"
description = ""
authors = ["Max Wickham <maxwickhammonro@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.22.0"
tensorflow = "^2.7.0"
keras = "^2.7.0"
ipykernel = "^6.7.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
